--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">❤Bogummy</h1>
+        <h1 class="sitename">BOGUMMY⭐SHINING</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
